--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link href="css/index.css" rel="stylesheet" />
     <link
-      href="https://fonts.googleapis.com/css?family=Righteous&display=swap"
+      href="https://fonts.googleapis.com/css?family=Righteous|Ubuntu&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/d4d265605d.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Marketing-Tipsease</title>
   </head>
@@ -16,23 +20,106 @@
     <div class="container">
       <header>
         <div>
-          <h1 class="tps-logo">Tipsease</h1>
+          <img src="./img/LogoMakr_8NwpYF.png" alt="tipsease" />
         </div>
         <nav>
           <a href="#">Home</a>
-          <a href="#">How We Work</a>
+          <a href="#">Product</a>
           <a href="#">About</a>
         </nav>
       </header>
+      <main>
+        <section class="top-content">
+          <div class="overlay-cont">
+            <h1>
+              "The best way to tip. Ever."
+            </h1>
+            <p>- Everybody</p>
+            <button>Download</button>
+        </div>
+        <h1>Why us?</h1>
+          <div class='why-cont'>
+                
+            <div class="box cont1">
+                <div class="problem">
+                    <h2>The problem</h2>
+                    <p>
+                    Servers depend on your tips for their survival. If you don't tip,
+                    they don't make any money. Even if you do, you    never know if that
+                    money really goes to your server.
+                    <br />
+                    In some restaurants, servers have to share large portions of their
+                    tips. They may only get a small percentage of what you give them.
+                    <p/>
+                </div>
+            </div>
+            <div class="box cont2">
+                <div class="problem2">
+                    <h2>What about me?</h2>
+                     <p>Our mission is to help our food industry workers and help you!
+                    <br />
+                    We know how bothersome it can be to look through your wallet for
+                    bills or change. You're no Einstein, why should you have
+                    to worry about calculating percentages in your head.
+                    <p/>
+              </div>
+            </div>
+              <div class="box cont3">
+                  <div class="problem3">
 
-      <section class="top-content">
-        <h1>Our Mission</h1>
-        <h2>Serving those who serve...</h2>
-      </section>
+                    <h2>Our Guarantee</h2>
+                    <p>With Tipsease, we make all these problems go away.
+                    <br />
+                    You feel better, your server feels better, and we feel better!
+                    </p>
+                </div>
+            </div>
+          </div>
+        </section>
+        <section class="features">
+            
+          <h1>Features</h1>
+          <div class=feat-cont>
+          <div class="fea-box">
+            <h2>Secure</h2>
+            <i class="mask fas fa-mask fa-6x"></i>
+            <p>
+              Our end-to-end encryption ensures that your account information is
+              protected.
+            </p>
+            <hr />
+          </div>
+          <div class="fea-box">
+            <h2>Accessible</h2>
+            <i class="globe fas fa-globe-americas fa-6x" aria-hidden="true"></i>
+            <p>
+              Anytime, anywhere. Use Tipsease whenever you want at restaurants
+              all over the world!
+            </p>
+            <hr />
+          </div>
+          <div class="fea-box">
+            <h2>Easy-Peasy</h2>
+            <i class="lemon far fa-lemon fa-6x"></i>
+            <p>
+              Lemon squeezy! Its as easy as 1,2,3. Find your restaurant, select
+              your server, and pay your tip!
+            </p>
+            <hr />
+          </div>
+        </div>
+        </section>
+      </main>
       <footer>
-        <a href="#">Home</a>
-        <a href="#">How We Work</a>
-        <a href="#">About</a>
+        <div class="mini-nav">
+          <a href="#">Home</a>
+          <a href="#">Product</a>
+          <a href="#">About</a>
+        </div>
+        <p>Copyright Brett Sherwood 2019</p>
+        <a href="https://logomakr.com">
+          <p>Created my free logo at LogoMakr.com</p>
+        </a>
       </footer>
     </div>
   </body>
