--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       src="https://kit.fontawesome.com/d4d265605d.js"
       crossorigin="anonymous"
     ></script>
+    <script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'-Xd2Hq-TT6RVhnO8b9M-pw',sig:'bNUzQWM-ozmKG5iWHF5uMKX_JNh3fID1cHci-c46qMs=',w:'505px',h:'340px',items:'506828094',caption: true ,tld:'com',is360: false })});</script>
+    <script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
 
     <title>Marketing-Tipsease</title>
   </head>
@@ -24,24 +26,27 @@
         </div>
         <nav>
           <a href="#">Home</a>
-          <a href="#">Product</a>
-          <a href="#">About</a>
+          <a href="./index.html">Product</a>
+          <a href="./about.html">About</a>
         </nav>
       </header>
       <main>
         <section class="top-content">
-          <div class="overlay-cont">
+          <div class="background-cont">
+            <div class="overlay-cont">
             <h1>
               "The best way to tip. Ever."
             </h1>
             <p>- Everybody</p>
             <button>Download</button>
+          </div>
+          <a id='FV8QIkOZRDh0FJ3G_kffNQ' class='gie-single' href='http://www.gettyimages.com/detail/506828094' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'FV8QIkOZRDh0FJ3G_kffNQ',sig:'gpsQOkVqQjtBTKf2T8w0SjsWGdgmjqntlHSptM9OVjg=',w:'505px',h:'340px',items:'506828094',caption: false ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script>
         </div>
         <h1>Why us?</h1>
           <div class='why-cont'>
-                
             <div class="box cont1">
                 <div class="problem">
+                  
                     <h2>The problem</h2>
                     <p>
                     Servers depend on your tips for their survival. If you don't tip,
