Updating the About Us page.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <a href="#">Product</a>
           <a href="#">About</a>
         </div>
-        <p>Copyright Brett Sherwood 2019</p>
+        <p>&copy; Brett Sherwood 2019</p>
         <a href="https://logomakr.com">
           <p>Created my free logo at LogoMakr.com</p>
         </a>
