--- a/about.html
+++ b/about.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css?family=Righteous|Ubuntu&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/d4d265605d.js"
+      crossorigin="anonymous"
+    ></script>
     <title>About Us</title>
   </head>
   <body>
@@ -24,60 +28,143 @@
         </nav>
       </header>
       <main>
-        <section class="mono">
-          <h1>Who are we?</h1>
-          <p>
-            We are a group of talented individuals who are going to conquer the
-            world with our web development skills. Join us!
-          </p>
-        </section>
+        <div class="background">
+          <section class="mono">
+            <h1>Who are we?</h1>
+            <p>
+              We are a group of talented individuals who are going to conquer
+              the world with our web development skills. We built this app
+              because we are passionate about solving the problems that the
+              average joe or average jill face, because we are just like you!
+            </p>
+          </section>
+        </div>
         <section class="img-grid">
           <h1>The Dream Team</h1>
           <div class="people">
             <div class="person-box">
-              <h2>Brian Marshall</h2>
               <img
                 src="https://ca.slack-edge.com/T4JUEB3ME-UG40NEE8L-8e8806d72c28-512"
                 alt="Brian Marshall"
               />
-              <h2>Web Developer</h2>
+              <div class="overlay brian">
+                <div class="text-content">
+                  <h2>Brian Marshall</h2>
+                  <p>React | Backend Team</p>
+                  <div class="contact-btns">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                    <i class="fab fa-github-square fa-2x"></i>
+                    <i class="fab fa-linkedin fa-2x"></i>
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="person-box">
-              <h2>Kayla Dailey</h2>
               <img
                 src="https://ca.slack-edge.com/T4JUEB3ME-UH2046CPN-be0c25886eac-512"
                 alt="Kayla Dailey"
               />
+              <div class="overlay kayla">
+                <div class="text-content">
+                  <h2>Kayla Dailey</h2>
+                  <p>React | Backend Team</p>
+                  <div class="contact-btns">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                    <i class="fab fa-github-square fa-2x"></i>
+                    <i class="fab fa-linkedin fa-2x"></i>
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                  </div>
+                </div>
+              </div>
             </div>
 
             <div class="person-box">
-              <h2>Lee Damien</h2>
               <img
                 src="https://ca.slack-edge.com/T4JUEB3ME-UMQTS14LV-g13b3b708a55-512"
                 alt="Lee Damien"
               />
+              <div class="overlay lee">
+                <div class="text-content">
+                  <h2>Lee Damien</h2>
+                  <p>UI | Frontend Team</p>
+                  <div class="contact-btns">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                    <i class="fab fa-github-square fa-2x"></i>
+                    <i class="fab fa-linkedin fa-2x"></i>
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="person-box">
-              <h2>Brett Sherwood</h2>
               <img
                 src="https://ca.slack-edge.com/T4JUEB3ME-UMDECFQ10-897d3c80b2b0-512"
                 alt="Brett Sherwood"
               />
+              <div class="overlay brett">
+                <div class="text-content">
+                  <h2>Brett Sherwood</h2>
+                  <p>UI | Frontend Team</p>
+                  <div class="contact-btns">
+                    <a href="https://github.com/bsherwood9" style="color: white"
+                      ><i class="fab fa-github-square fa-2x"></i
+                    ></a>
+
+                    <i class="fab fa-linkedin fa-2x"></i>
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="person-box">
-              <h2>Shiva Banihashem</h2>
               <img
                 src="https://ca.slack-edge.com/T4JUEB3ME-UJ85BKJ2D-891ffcc3ccce-512"
                 alt="Shiva Banihashem"
               />
+              <div class="overlay shiva">
+                <div class="text-content">
+                  <h2>Shiva Banihashem</h2>
+                  <p>React | Frontend Team</p>
+                  <div class="contact-btns">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                    <i class="fab fa-github-square fa-2x"></i>
+                    <i class="fab fa-linkedin fa-2x"></i>
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="person-box">
-              <h2>Nicholas Galucci</h2>
               <img
                 src="https://ca.slack-edge.com/T4JUEB3ME-UJ9PRPB7H-01a2702a44b8-512"
                 alt="Nicholas Galucci"
               />
+              <div class="overlay nicholas">
+                <div class="text-content">
+                  <h2>Nicholas Galucci</h2>
+                  <p>React | Frontend Team</p>
+
+                  <div class="contact-btns">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                    <i class="fab fa-github-square fa-2x"></i>
+                    <i class="fab fa-linkedin fa-2x"></i>
+                    <i class="fab fa-twitter-square fa-2x"></i>
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
+        </section>
+        <h1>Contact Us</h1>
+        <section class="contact">
+          <div class="contact-info">
+            <h1>Join the team</h1>
+            <p>
+              We are always interested in collaborating and working with the
+              brightest minds. If you have something to offer and feel like you
+              would be a good part of our team, please reach out.
+            </p>
           </div>
         </section>
       </main>
@@ -87,7 +174,7 @@
           <a href="#">Product</a>
           <a href="#">About</a>
         </div>
-        <p>Copyright Brett Sherwood 2019</p>
+        <p>&copy; Brett Sherwood 2019</p>
         <a href="https://logomakr.com">
           <p>Created my free logo at LogoMakr.com</p>
         </a>
