Changed some of the copy on index.html

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                      <p>Our mission is to help our food industry workers and help you!
                     <br />
                     We know how bothersome it can be to look through your wallet for
-                    bills or change. You're no Einstein, why should you have
-                    to worry about calculating percentages in your head.
+                    bills or change. We make it easy to calculate your tips and allow you to pay your server what they deserve with no stress.
                     <p/>
               </div>
             </div>
@@ -73,7 +72,7 @@
                   <div class="problem3">
 
                     <h2>Our Guarantee</h2>
-                    <p>With Tipsease, we make all these problems go away.
+                    <p>With Tipsease, we make all your tipping problems go away.
                     <br />
                     You feel better, your server feels better, and we feel better!
                     </p>
