--- a/about.html
+++ b/about.html
@@ -171,8 +171,8 @@
       <footer>
         <div class="mini-nav">
           <a href="#">Home</a>
-          <a href="#">Product</a>
-          <a href="#">About</a>
+          <a href="./index.html">Product</a>
+          <a href="./about.html">About</a>
         </div>
         <p>&copy; Brett Sherwood 2019</p>
         <a href="https://logomakr.com">
