Changed the nav a smaller breakpoints to keep sign-up from wrapping.

--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
           <img src="./img/LogoMakr_8NwpYF.png" alt="tipsease" />
         </div>
         <nav>
-          <a href="#">Home</a>
-          <a href="./index.html">Product</a>
+          <a href="./index.html">Home</a>
           <a href="./about.html">About</a>
+          <a href="#">Sign Up</a>
         </nav>
       </header>
       <main>
@@ -170,9 +170,9 @@
       </main>
       <footer>
         <div class="mini-nav">
-          <a href="#">Home</a>
-          <a href="./index.html">Product</a>
+          <a href="./index.html">Home</a>
           <a href="./about.html">About</a>
+          <a href="#">Sign Up</a>
         </div>
         <p>&copy; Brett Sherwood 2019</p>
         <a href="https://logomakr.com">
