--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <img src="./img/LogoMakr_8NwpYF.png" alt="tipsease" />
         </div>
         <nav>
-          <a href="#">Home</a>
-          <a href="./index.html">Product</a>
+          <a href="./index.html">Home</a>
           <a href="./about.html">About</a>
+          <a href=#>Sign Up</a>
         </nav>
       </header>
       <main>
@@ -116,9 +116,9 @@
       </main>
       <footer>
         <div class="mini-nav">
-          <a href="#">Home</a>
-          <a href="./index.html">Product</a>
+          <a href="./index.html">Home</a>
           <a href="./about.html">About</a>
+          <a href=#>Sign Up</a>
         </div>
         <p>&copy; Brett Sherwood 2019</p>
         <a href="https://logomakr.com">
