Made some minor changes to the about page, added urls to buttons on Homepage and navbars.

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <nav>
           <a href="./index.html">Home</a>
           <a href="./about.html">About</a>
-          <a href="#">Sign Up</a>
+          <a href="https://tipsease-bw.netlify.com/UserLogin">Login</a>
         </nav>
       </header>
       <main>
@@ -90,7 +90,9 @@
                   <p>UI | Frontend Team</p>
                   <div class="contact-btns">
                     <i class="fab fa-facebook-square fa-2x"></i>
-                    <i class="fab fa-github-square fa-2x"></i>
+                    <a href="https://github.com/Notesong/"
+                      ><i class="fab fa-github-square fa-2x"></i
+                    ></a>
                     <i class="fab fa-linkedin fa-2x"></i>
                     <i class="fab fa-twitter-square fa-2x"></i>
                   </div>
@@ -107,11 +109,13 @@
                   <h2>Brett Sherwood</h2>
                   <p>UI | Frontend Team</p>
                   <div class="contact-btns">
-                    <a href="https://github.com/bsherwood9" style="color: white"
+                    <a href="https://github.com/bsherwood9"
                       ><i class="fab fa-github-square fa-2x"></i
                     ></a>
 
-                    <i class="fab fa-linkedin fa-2x"></i>
+                    <a href="https://www.linkedin.com/in/brett-sherwood/">
+                      <i class="fab fa-linkedin fa-2x"></i
+                    ></a>
                     <i class="fab fa-twitter-square fa-2x"></i>
                   </div>
                 </div>
@@ -128,7 +132,9 @@
                   <p>React | Frontend Team</p>
                   <div class="contact-btns">
                     <i class="fab fa-facebook-square fa-2x"></i>
-                    <i class="fab fa-github-square fa-2x"></i>
+                    <a href="https://github.com/shiva-banihashem"
+                      ><i class="fab fa-github-square fa-2x"></i
+                    ></a>
                     <i class="fab fa-linkedin fa-2x"></i>
                     <i class="fab fa-twitter-square fa-2x"></i>
                   </div>
@@ -165,6 +171,8 @@
               brightest minds. If you have something to offer and feel like you
               would be a good part of our team, please reach out.
             </p>
+            <p>Phone: 323-323-3232</p>
+            <p>Email: info@tipsease.com</p>
           </div>
         </section>
       </main>
@@ -172,7 +180,7 @@
         <div class="mini-nav">
           <a href="./index.html">Home</a>
           <a href="./about.html">About</a>
-          <a href="#">Sign Up</a>
+          <a href="https://tipsease-bw.netlify.com/UserLogin">Login</a>
         </div>
         <p>&copy; Brett Sherwood 2019</p>
         <a href="https://logomakr.com">
