--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav>
           <a href="./index.html">Home</a>
           <a href="./about.html">About</a>
-          <a href=#>Sign Up</a>
+          <a href=https://tipsease-bw.netlify.com/UserLogin>Login</a>
         </nav>
       </header>
       <main>
@@ -38,7 +38,7 @@
               "The best way to tip. Ever."
             </h1>
             <p>- Everybody</p>
-            <button>Sign Up</button>
+            <button><a href="https://tipsease-bw.netlify.com/usersignup">Sign Up</a></button>
           </div>
           <!-- <a id='FV8QIkOZRDh0FJ3G_kffNQ' class='gie-single' href='http://www.gettyimages.com/detail/506828094' target='_blank' style='color:#a7a7a7;text-decoration:none;font-weight:normal !important;border:none;display:inline-block;'>Embed from Getty Images</a><script>window.gie=window.gie||function(c){(gie.q=gie.q||[]).push(c)};gie(function(){gie.widgets.load({id:'FV8QIkOZRDh0FJ3G_kffNQ',sig:'gpsQOkVqQjtBTKf2T8w0SjsWGdgmjqntlHSptM9OVjg=',w:'505px',h:'340px',items:'506828094',caption: false ,tld:'com',is360: false })});</script><script src='//embed-cdn.gettyimages.com/widgets.js' charset='utf-8' async></script> -->
         </div>
@@ -118,7 +118,7 @@
         <div class="mini-nav">
           <a href="./index.html">Home</a>
           <a href="./about.html">About</a>
-          <a href=#>Sign Up</a>
+          <a href=https://tipsease-bw.netlify.com/UserLogin>Login</a>
         </div>
         <p>&copy; Brett Sherwood 2019</p>
         <a href="https://logomakr.com">
