Added github navlinks for each teammate

--- a/about.html
+++ b/about.html
@@ -53,7 +53,9 @@
                   <p>React | Backend Team</p>
                   <div class="contact-btns">
                     <i class="fab fa-facebook-square fa-2x"></i>
-                    <i class="fab fa-github-square fa-2x"></i>
+                    <a href="https://github.com/B-Marshall218"
+                      ><i class="fab fa-github-square fa-2x"></i
+                    ></a>
                     <i class="fab fa-linkedin fa-2x"></i>
                     <i class="fab fa-twitter-square fa-2x"></i>
                   </div>
@@ -71,7 +73,9 @@
                   <p>React | Backend Team</p>
                   <div class="contact-btns">
                     <i class="fab fa-facebook-square fa-2x"></i>
-                    <i class="fab fa-github-square fa-2x"></i>
+                    <a href="https://github.com/kayladailey"
+                      ><i class="fab fa-github-square fa-2x"></i
+                    ></a>
                     <i class="fab fa-linkedin fa-2x"></i>
                     <i class="fab fa-twitter-square fa-2x"></i>
                   </div>
@@ -153,7 +157,9 @@
 
                   <div class="contact-btns">
                     <i class="fab fa-facebook-square fa-2x"></i>
-                    <i class="fab fa-github-square fa-2x"></i>
+                    <a href="https://github.com/NickGallucci"
+                      ><i class="fab fa-github-square fa-2x"></i
+                    ></a>
                     <i class="fab fa-linkedin fa-2x"></i>
                     <i class="fab fa-twitter-square fa-2x"></i>
                   </div>
